--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,17 @@
 - name: Pikachu025
   image: pikachu025.png
+  date: Thu. June 14th, 2018
+  title: Tales of Vesperia: Definitive Edition Announced
+  content: |
+      <p>Bandai Namco Entertainment has recently announced Tales of Vesperia: Definitive Edition for Steam, PlayStation 4, Xbox One, and Nintendo Switch. It will be released worldwide and is going to feature the formerly PS3 exclusive content.</p>
+      <br />
+      <p>You can read the official press releases <a href="https://www.bandainamcoent.com/news/tales-of-vesperia-definitive-edition-announced-for-xbox-one-ps4-switch-and-pc">here</a> and <a href="https://en.bandainamcoent.eu/tales-of/news/tales-of-vesperia-definitive-edition-announced">here</a>.</p>
+      <br />
+      <p>As such, we have decided to withdraw our fan translation patch. This translation was always intended to allow the English speaking Tales fanbase to fully enjoy the PS3 exclusive Vesperia content, and it has served this purpose well for a few years now. But with this announcement it is no longer neccessary, so we are no longer going to distribute the patch.</p>
+      <p>If you are distributing this patch yourself, we would appreciate if you respected this decision and stopped doing so. Thank you.</p>
+      <p>If you want to play Tales of Vesperia with the PS3 content, please buy and support the official release of the Definitive Edition this Winter.</p>
+- name: Pikachu025
+  image: pikachu025.png
   date: Sat. March 14th, 2015
   title: Patch Release
   content: |
