fix yaml syntax

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,7 +1,7 @@
 - name: Pikachu025
   image: pikachu025.png
   date: Thu. June 14th, 2018
-  title: Tales of Vesperia: Definitive Edition Announced
+  title: "Tales of Vesperia: Definitive Edition Announced"
   content: |
       <p>Bandai Namco Entertainment has recently announced Tales of Vesperia: Definitive Edition for Steam, PlayStation 4, Xbox One, and Nintendo Switch. It will be released worldwide and is going to feature the formerly PS3 exclusive content.</p>
       <br />
